Fix flex gap in header nav

--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -261,6 +261,7 @@ header>nav {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    gap: var(--s1);
 }
 
 header>nav>ul {
